--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@nuxt/typescript-runtime": "^2.0.1",
+        "@nuxtjs/axios": "^5.13.1",
         "core-js": "^3.8.3",
         "imagesloaded": "^4.1.4",
         "nuxt": "^2.14.12"
@@ -29,15 +30,12 @@
         "babel-eslint": "^10.1.0",
         "babel-jest": "^26.6.3",
         "eslint": "^7.18.0",
-        "eslint-config-prettier": "^7.2.0",
         "eslint-plugin-nuxt": "^2.0.0",
-        "eslint-plugin-prettier": "^3.3.1",
         "eslint-plugin-vue": "^7.5.0",
         "jest": "^26.6.3",
         "node-sass": "^5.0.0",
         "nuxt-gsap": "^0.1.4",
         "nuxt-gsap-module": "^1.2.0",
-        "prettier": "^2.2.1",
         "sass-loader": "10.1.1",
         "ts-jest": "^26.4.4",
         "vue-jest": "^3.0.4"
